--- a/ex002-Card/src/App.module.css
+++ b/ex002-Card/src/App.module.css
@@ -4,16 +4,41 @@
 }
 
 .container {
+    width: 65rem;
     background-color: #D7E1E7;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 20px;
-    min-height: 100vh;
-    margin: 20px;
-    padding: 30px;
+    padding: 50px 70px 50px 70px;
 }
 
-.img {
+.infoText {
+    font-weight: 600;
+}
 
+.container01 {
+    display: flex;
+    gap: 50px;
+}
+
+.container03 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 40px;
+}
+
+.btn {
+    transition: 0.5s;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+@media (max-width: 1090px) {
+    .container {
+        width: 100%;
+    }
 }
