--- a/ex002-Card/src/styles/globals.css
+++ b/ex002-Card/src/styles/globals.css
@@ -7,6 +7,7 @@
 body {
     font-family: sans-serif;
     min-height: 100vh;
-    display: grid;
-    place-content: center;    
+    display: flex;
+    justify-content: center;
+    padding: 30px;
 }
