--- a/ex003-Profile/src/components/ProfileImg/styles.module.css
+++ b/ex003-Profile/src/components/ProfileImg/styles.module.css
@@ -5,3 +5,16 @@
     border: 1px solid #fff;
     box-shadow: 0px 5px 15px #bebebe;
 }
+
+.img:hover {
+    animation: spin 2s normal;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
