--- a/ex004-PasswordGenerator/src/components/Button/style.module.scss
+++ b/ex004-PasswordGenerator/src/components/Button/style.module.scss
@@ -10,7 +10,8 @@
     background-color: #000;
     transition: 0.3s;
     &:hover {
-        background-color: #ff3f3f;
+        color: #000;
+        background-color: #ffffff;
         cursor: pointer;
     }
 }
