--- a/ex004-PasswordGenerator/src/components/Title/style.module.scss
+++ b/ex004-PasswordGenerator/src/components/Title/style.module.scss
@@ -1,5 +1,5 @@
 .title {
-    color: #ff3f3f;
+    color: #ffffff;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 3rem;
 }
