--- a/ex004-PasswordGenerator/src/components/Footer/style.module.scss
+++ b/ex004-PasswordGenerator/src/components/Footer/style.module.scss
@@ -4,5 +4,5 @@
     justify-content: center;
     gap: 2rem;
     min-height: 10rem;
-    border-top: 1px solid #bebebe;
+    background-color: #000;
 }
