--- a/ex004-PasswordGenerator/src/components/Input/style.module.scss
+++ b/ex004-PasswordGenerator/src/components/Input/style.module.scss
@@ -1,7 +1,12 @@
 .inpt {
+    text-align: center;
     height: 3rem;
     width: 25rem;
     background-color: #3a3a3a;
-    border: #ffffff 1px solid;
+    border: #000000 1px solid;
     border-radius: 5px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+    color: #fff;
 }
