--- a/aula013-Compartilhando_States/src/index.css
+++ b/aula013-Compartilhando_States/src/index.css
@@ -31,6 +31,11 @@ button, input {
     border: 1px solid #000;
     border-radius: .5rem;
     cursor: pointer;
+    transition: .3s;
+}
+
+input:hover, button:hover {
+    border: 1px solid #bebebe;
 }
 
 p {
