--- a/aula014-Render_Condicional/src/index.css
+++ b/aula014-Render_Condicional/src/index.css
@@ -5,11 +5,24 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+::selection {
+    background-color: #fff;
+    color: #000;
+}
+
+.rod {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 body {
-    background-color: #161616;
+    background-color: #0e0e0e;
     min-height: 100vh;
-    display: grid;
-    place-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -40,7 +53,7 @@ button:hover {
     border: 1px solid #bebebe;
 }
 
-p {
+.p {
     font-size: 1.5rem;
     font-weight: 600;
     color: #fff;
