--- a/aula014-Render_Condicional/src/index.css
+++ b/aula014-Render_Condicional/src/index.css
@@ -10,7 +10,7 @@
     color: #000;
 }
 
-.rod {
+.containter {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,7 +18,7 @@
 }
 
 body {
-    background-color: #0e0e0e;
+    background-color: #1b1b1b;
     min-height: 100vh;
     display: flex;
     justify-content: center;
