--- a/ex006-FeedComentario/src/style/App.css
+++ b/ex006-FeedComentario/src/style/App.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #0b0b0b;
 }
 
 .mainContent {
