--- a/ex006-FeedComentario/src/style/App.css
+++ b/ex006-FeedComentario/src/style/App.css
@@ -4,12 +4,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #0b0b0b;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgb(32, 32, 32) 100%);
 }
 
 .mainContent {
     padding: 2rem;
-    background-color: #EAEAEA;
+    background-color: #ffffff;
     width: 20rem;
     display: flex;
     flex-direction: column;
