--- a/aula016-UseRef/src/App.css
+++ b/aula016-UseRef/src/App.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #fff;
+    font-weight: 400;
 }
 
 section {
@@ -43,4 +44,12 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+input {
+    padding: 1.1rem 1.5rem;
+    margin: 0 .5rem;
+    border-radius: .5rem;
+    border: 1px solid #1f1f1f;
+    background-color: #000;
 }
